--- a/legacy_money4bandv3x/.env.template
+++ b/legacy_money4bandv3x/.env.template
@@ -87,6 +87,12 @@ SPEEDSHARE_DEVICE_UUID=yourSPEEDSHAREDeviceUUID
 GRASS_EMAIL=yourGRASSMail
 GRASS_PASSWD=yourGRASSPw
 
+## PACKETSHARE
+# Your Packetshare account name or email
+# Your Packetshare account password
+PACKETSHARE_EMAIL=yourGRASSMail
+PACKETSHARE_PASSWD=yourGRASSPw
+
 # MYSTNODE
 # Mystnode have a special first startup process , see manual setup documentation or use te setup script
 MYSTNODE_DASHBOARD_PORT=4449
