--- a/legacy_money4bandv3x/.env.template
+++ b/legacy_money4bandv3x/.env.template
@@ -87,11 +87,17 @@ SPEEDSHARE_DEVICE_UUID=yourSPEEDSHAREDeviceUUID
 GRASS_EMAIL=yourGRASSMail
 GRASS_PASSWD=yourGRASSPw
 
+## GRADIENT
+# Your Gradient account name or email
+# Your Gradient account password
+GRADIENT_EMAIL=yourGRADIENTMail
+GRADIENT_PASSWD=yourGRADIENTPw
+
 ## PACKETSHARE
 # Your Packetshare account name or email
 # Your Packetshare account password
-PACKETSHARE_EMAIL=yourGRASSMail
-PACKETSHARE_PASSWD=yourGRASSPw
+PACKETSHARE_EMAIL=yourPACKETSHAREMail
+PACKETSHARE_PASSWD=yourPACKETSHAREPw
 
 # MYSTNODE
 # Mystnode have a special first startup process , see manual setup documentation or use te setup script
